test/src/e2e_vm_tests/test_programs/should_fail/trait_pub_fn_method/src/main.sw
contract;

trait A {} {
    pub fn f(self) -> bool {
        false
    }
}
